Remove application.yaml from version control

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,10 @@ target/
 !**/src/main/**/target/
 !**/src/test/**/target/
 
+### Ignore sensitive configuration files ###
+/src/main/resources/application.yaml
+/src/main/resources/application.properties
+
 ### STS ###
 .apt_generated
 .classpath
